Contrast error correction

--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,7 @@ ul.social-media-list a:hover {
 .zone-c1 {
     color: #cdc048;
     font-size: 25px;
+    font-weight: bold;
     text-shadow: #000000 2px 0 2px;
     position: absolute;
     top: 50%;
